Revision history for HTTP-Message

{{$NEXT}}

7.00      2024-10-07 15:31:56Z
    - Stop transforming LF into CRLF. Fixes #69 (GH#196) (Olaf Alders)

6.46      2024-05-27 18:58:16Z
    - Update several status codes to RFC 9110 (GH#197) (Wesley Schwengle)

6.45      2023-09-27 14:27:31Z
    - Allow for file ownership conflicts with Docker and GitHub Actions
      (GH#193) (Olaf Alders)
    - Add the 'status_code' function for getting all status codes as hash
      (GH#194) (Dai Okabayashi)

6.44      2022-10-26 20:49:00Z
    - Made the Clone module a hard requirement, so we don't have to
      provide a fallback function for HTTP::Headers::clone().
      We require at least Clone 0.46, as that release now supports
      Perl back to 5.8.1, just like us. (GH#184) (Neil Bowers)
    - Import clone from Clone rather than inheriting (GH#189) (Graham Knop)
    - Made the Compress::Raw::Zlib 2.062 module minimal required
      version. (GH#190) (Jakub 'q84fh' Skory)

6.43      2022-10-22 14:50:35Z
    - Remove dependency to IO::Uncompress::Bunzip2. (Michal Josef Spacek)
    - Remove dependency to IO::Uncompress::Gunzip. (Michal Josef Spacek)

6.42      2022-10-18 13:53:22Z
    - We now don't consider the Content-Location header when asked
      for the base URI. RFC 7231 says we shouldn't. (GH#51) (Neil Bowers)
    - Increased the (max) buffer size for read() when processing form data,
      from 2048 to 8192. This was suggested in RT#105184, as it improved
      performance for them. (GH#59) (Neil Bowers)

6.41      2022-10-12 15:57:40Z
    - Add maximum size for HTTP::Message->decoded_content
      This can be used to limit the size of a decompressed HTTP response,
      especially when making requests to untrusted or user-specified servers.
      The $HTTP::Message::MAXIMUM_BODY_SIZE variable and the ->max_body_size
      accessor can set this limit. (GH#181) (Max Maischein)

6.40      2022-10-12 15:45:52Z
    - Fixed two typos in the doc, originally reported by FatherC